--- a/src/components/CharacterEditor/CharacterEditor.module.css
+++ b/src/components/CharacterEditor/CharacterEditor.module.css
@@ -1,30 +1,43 @@
 .characterEditor {
-  padding-top: 128px;
-  padding-bottom: 64px;
+    padding-top: 128px;
+    padding-bottom: 64px;
+    position: relative;
 }
 
 .maxWidthWrapper {
+    max-width: 1024px;
 }
 
 .header {
-  padding-bottom: 64px;
+    padding-bottom: 64px;
+    width: 65%;
 }
 
 .title {
-  font-size: 2.5rem;
-  font-weight: 600;
-  margin-top: 0;
-  margin-bottom: 16px;
-  letter-spacing: -0.5px;
+    font-size: 2.5rem;
+    font-weight: 600;
+    margin-top: 0;
+    margin-bottom: 16px;
+    letter-spacing: -0.5px;
 }
 
 .description {
-  font-size: 1.25rem;
-  margin: 0;
+    font-size: 1.25rem;
+    margin: 0;
 }
 
 .characterWrapper {
+    position: fixed;
+    right: 0px;
+    top: 200px;
+    min-height: 500px;
+    max-width: 35%;
+}
+
+.characterWrapper svg {
+    width: 100%;
 }
 
 .controlColumn {
+    width: 50%;
 }
